@startuml

title __APPLICATION's Class Diagram__\n

  package com.miss.artificial_city {
    package com.miss.artificial_city.application {
      interface CreatorService {
          {abstract} + openSimulationBoard()
          {abstract} + saveSimulationBoard()
          {abstract} + getAllBoardNames()
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.application {
      class CreatorServiceImpl {
          + CreatorServiceImpl()
          + openSimulationBoard()
          + saveSimulationBoard()
          + getAllBoardNames()
      }
    }
  }
  

  CreatorServiceImpl -up-|> CreatorService
  CreatorServiceImpl o-- BoardDao : boardDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
